added controllers and page content for events

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,3 +11,29 @@
         <script src="https://kit.fontawesome.com/0bc99a83a8.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="img/meetup-icon.jpeg" type="image/x-icon">
 </head>
+<body>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand ms-2" href="index.html">
+                <img src="img/meetup-og.jpeg" width="150" height="70" class="d-inline-block align-top" alt="Movie meetup logo">
+                <h1>Movie Meetup</h1>
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-item me-2 h4 text-white-50 text-decoration-none" href="newEvent.html">New Event</a>
+                    <a class="nav-item me-2 h4 text-white-50 text-decoration-none" href="#">Sign Up</a>
+                    <a class="nav-item me-2 h4 text-white-50 text-decoration-none" href="#">Login</a>
+                </div>
+            </div>
+        </nav>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="navbar-nav ms-2">
+                <a class= "nav-item h4 text-white-50 text-decoration-none" href="events.html">Events</a>
+            </div>
+        </nav>
+    </header>
+    <main>
