working controller and views updated

--- a/views/event/index.ejs
+++ b/views/event/index.ejs
@@ -1,4 +1,4 @@
-<%- include('./partials/header.ejs') %>
+<%- include('../partials/header.ejs') %>
 <div class="container p-2">
     <h3>Action Genre</h3>
     <ul class="ml-3 list-group">
@@ -14,4 +14,4 @@
                 Wallflower (2012)</a></li>
     </ul>
 </div>
-<%- include('./partials/footer.ejs') %>
+<%- include('../partials/footer.ejs') %>
