--- a/views/event/new.ejs
+++ b/views/event/new.ejs
@@ -1,4 +1,4 @@
-<%- include('./partials/header.ejs') %>
+<%- include('../partials/header.ejs') %>
 <h3 class="text-center">Create A <u> Movie Meetup </u></h3>
         <!-- used bootstrap form model -->
         <div class="container w-75 p-3">
@@ -62,4 +62,4 @@
                 </div>
             </form>
         </div>
-<%- include('./partials/footer.ejs') %>
+<%- include('../partials/footer.ejs') %>
