--- a/views/main/index.ejs
+++ b/views/main/index.ejs
@@ -1,4 +1,4 @@
-<%- include('./partials/header.ejs') %>
+<%- include('../partials/header.ejs') %>
 <div class="container">
     <div class="text-center">
         <h3>Welcome to Movie Meetup!</h3>
@@ -27,7 +27,7 @@
         <div class="col">
             <div class="text-center">
                 <figure>
-                    <img src="img/watch-party.jpg" class="img-fluid" alt="Watch party movies" width="612"
+                    <img src="images/watch-party.jpg" class="img-fluid" alt="Watch party movies" width="612"
                         height="408">
                     <figcaption>
                         Courtesy of iStockPhoto by Getty Photos
@@ -37,4 +37,4 @@
         </div>
     </div>
 </div>
-<%- include('./partials/footer.ejs') %>
+<%- include('../partials/footer.ejs') %>
