--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,8 +14,8 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand ms-2" href="index.html">
-                <img src="img/meetup-og.jpeg" width="150" height="70" class="d-inline-block align-top" alt="Movie meetup logo">
+            <a class="navbar-brand ms-2" href="/">
+                <img src="images/meetup-og.jpeg" width="150" height="70" class="d-inline-block align-top" alt="Movie meetup logo">
                 <h1>Movie Meetup</h1>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
@@ -24,7 +24,7 @@
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-item me-2 h4 text-white-50 text-decoration-none" href="newEvent.html">New Event</a>
+                    <a class="nav-item me-2 h4 text-white-50 text-decoration-none" href="/events/new">New Event</a>
                     <a class="nav-item me-2 h4 text-white-50 text-decoration-none" href="#">Sign Up</a>
                     <a class="nav-item me-2 h4 text-white-50 text-decoration-none" href="#">Login</a>
                 </div>
@@ -32,7 +32,7 @@
         </nav>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="navbar-nav ms-2">
-                <a class= "nav-item h4 text-white-50 text-decoration-none" href="events.html">Events</a>
+                <a class= "nav-item h4 text-white-50 text-decoration-none" href="/events">Events</a>
             </div>
         </nav>
     </header>
