--- a/views/event/event.ejs
+++ b/views/event/event.ejs
@@ -1,4 +1,4 @@
-<%- include('./partials/header.ejs') %>
+<%- include('../partials/header.ejs') %>
         <div class="container">
             
             <div class="pt-1 mb-2">
@@ -32,4 +32,4 @@
 
         </div>
 
-<%- include('./partials/footer.ejs') %>
+<%- include('../partials/footer.ejs') %>
