updated file paths and error page

--- a/views/event/event.ejs
+++ b/views/event/event.ejs
@@ -13,7 +13,7 @@
             <!-- Used card model from bootstrap -->
             <div class="col d-flex justify-content-center">
             <div class="card mb-2">
-                <img class="card-img-top" src="img/free-guy.jpg" alt="Free guy movie poster" style="object-fit: cover;" width="286" height="398">
+                <img class="card-img-top" src="images/free-guy.jpg" alt="Free guy movie poster" style="object-fit: cover;" width="286" height="398">
                 <div class="card-body">
                   <h5 class="card-title">Free Guy</h5>
                   <p class="card-text">A bank teller discovers that he's actually an NPC inside a brutal, open world video game.</p>
