--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 </main>
 <footer>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="/">
             <h6><i class="fa-regular fa-copyright"></i> Movie Meetup (Sudhamsh Mondrati)</h6>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
@@ -10,10 +10,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkupFooter">
             <div class="navbar-nav">
-                <a class="nav-item nav-link h4" href="newEvent.html">New Event</a>
+                <a class="nav-item nav-link h4" href="/events/new">New Event</a>
                 <a class="nav-item nav-link h4" href="#">Sign Up</a>
                 <a class="nav-item nav-link h4" href="#">Login</a>
-                <a class="nav-item nav-link h4" href="events.html">Events</a>
+                <a class="nav-item nav-link h4" href="/events">Events</a>
             </div>
         </div>
         <div class="collapse text-light navbar-collapse justify-content-end">
