--- a/views/event/new.ejs
+++ b/views/event/new.ejs
@@ -2,7 +2,7 @@
 <h3 class="text-center">Create A <u> Movie Meetup </u></h3>
         <!-- used bootstrap form model -->
         <div class="container w-75 p-3">
-            <form action="#">
+            <form action="/events" method="post">
                 <div class="form-group row m-2">
                     <label for="category" class="col-sm-2 col-form-label">Category</label>
                     <div class="col-sm-10">
