--- a/views/main/contact.ejs
+++ b/views/main/contact.ejs
@@ -1,3 +1,3 @@
 <%- include('../partials/header.ejs') %>
 Contact
-<%- include(',./partials/footer.ejs') %>
+<%- include('../partials/footer.ejs') %>
