--- a/views/main/error.ejs
+++ b/views/main/error.ejs
@@ -1,3 +1,6 @@
 <%- include('../partials/header.ejs') %>
-Error
+<div class="container">
+    <h2><%= error.status %> Error</h2>
+    <p><%= error.message %></p>
+</div>
 <%- include('../partials/footer.ejs') %>
