--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,13 +9,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
         <script src="https://kit.fontawesome.com/0bc99a83a8.js" crossorigin="anonymous"></script>
-    <link rel="shortcut icon" href="img/meetup-icon.jpeg" type="image/x-icon">
+    <link rel="shortcut icon" href="/images/meetup-icon.jpeg" type="image/x-icon">
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand ms-2" href="/">
-                <img src="images/meetup-og.jpeg" width="150" height="70" class="d-inline-block align-top" alt="Movie meetup logo">
+                <img src="/images/meetup-og.jpeg" width="150" height="70" class="d-inline-block align-top" alt="Movie meetup logo">
                 <h1>Movie Meetup</h1>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
