--- a/views/event/index.ejs
+++ b/views/event/index.ejs
@@ -1,17 +1,24 @@
 <%- include('../partials/header.ejs') %>
 <div class="container p-2">
     <h3>Action Genre</h3>
+    <% if (stories.action.length) { %>
     <ul class="ml-3 list-group">
-        <li class="list-group-item list-group-item-action"><a href="event.html" class="list-group-item-action">Spider-Man: No Way Home (2021)</a></li>
-        <li class="list-group-item list-group-item-action"><a href="event.html" class="list-group-item-action">Top Gun: Maverick (2022)</a></li>
-        <li class="list-group-item list-group-item-action"><a href="event.html" class="list-group-item-action">The Dark Knight (2008)</a></li>
+        <% stories.action.forEach(story => { %>
+        <li class="list-group-item list-group-item-action"><a href="/events/<%= story.id %>" class="list-group-item-action"><%= story.title %></a></li>
+        <% }) %>
     </ul>
+    <% } else { %>
+        <p>No movies in this genre.</p>
+    <% } %>
     <h3>Romance Genre</h3>
+    <% if (stories.romance.length) { %>
     <ul class="list-group ml-3">
-        <li class="list-group-item list-group-item-action"><a href="event.html" class="list-group-item-action">Free Guy (2021)</a></li>
-        <li class="list-group-item list-group-item-action"><a href="event.html" class="list-group-item-action">Paper Towns (2015)</a></li>
-        <li class="list-group-item list-group-item-action"><a href="event.html" class="list-group-item-action">The Perks of Being a
-                Wallflower (2012)</a></li>
+        <% stories.romance.forEach(story => { %>
+            <li class="list-group-item list-group-item-action"><a href="/events/<%= story.id %>" class="list-group-item-action"><%= story.title %></a></li>
+        <% }) %>
     </ul>
+    <% } else { %>
+        <p>No movies in this genre.</p>
+        <% } %>
 </div>
 <%- include('../partials/footer.ejs') %>
