--- a/views/event/new.ejs
+++ b/views/event/new.ejs
@@ -6,7 +6,7 @@
                 <div class="form-group row m-2">
                     <label for="category" class="col-sm-2 col-form-label">Category</label>
                     <div class="col-sm-10">
-                        <select class="form-select" id="category" required>
+                        <select class="form-select" id="category" name="category" required>
                             <option selected disabled value="0">-- Select a category --</option>
                             <option value="1">Action</option>
                             <option value="2">Romance</option>
@@ -19,34 +19,34 @@
                 <div class="form-group row m-2">
                     <label for="movieEventTitle" class="col-sm-2 col-form-label">Title</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="movieEventTitle" placeholder="Enter title here"
+                        <input type="text" name="title" class="form-control" id="movieEventTitle" placeholder="Enter title here"
                             required>
                     </div>
                 </div>
                 <div class="form-group row m-2">
                     <label for="movieEventDescription" class="col-sm-2 col-form-label">Description</label>
                     <div class="col-sm-10">
-                        <textarea class="form-control" id="movieEventDescription" placeholder="Enter description here"
+                        <textarea class="form-control" name="description" id="movieEventDescription" placeholder="Enter description here"
                             required></textarea>
                     </div>
                 </div>
                 <div class="form-group row m-2">
                     <label for="movieEventLocation" class="col-sm-2 col-form-label">Where</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="movieEventLocation"
+                        <input type="text" name="location" class="form-control" id="movieEventLocation"
                             placeholder="Enter location here" required>
                     </div>
                 </div>
                 <div class="form-group row m-2">
                     <label for="movieEventStart" class="col-sm-2 col-form-label">Start</label>
                     <div class="col-sm-10">
-                        <input type="datetime-local" class="form-control" id="movieEventStart" required>
+                        <input type="datetime-local" name="startAt" class="form-control" id="movieEventStart" required>
                     </div>
                 </div>
                 <div class="form-group row m-2">
                     <label for="movieEventEnd" class="col-sm-2 col-form-label">End</label>
                     <div class="col-sm-10">
-                        <input type="datetime-local" class="form-control" id="movieEventEnd" required>
+                        <input type="datetime-local" name="endAt" class="form-control" id="movieEventEnd" required>
                     </div>
                 </div>
                 <div class="form-group row m-2">
