--- a/views/event/event.ejs
+++ b/views/event/event.ejs
@@ -15,7 +15,7 @@
                 <img class="card-img-top" src="/images/free-guy.jpg" alt="Free guy movie poster" style="object-fit: cover;" width="286" height="398">
                 <div class="card-body">
                   <h5 class="card-title"><%= event.title %></h5>
-                  <p class="card-text"><%= event.description %></p>
+                  <p class="card-text"><%= event.details %></p>
                 </div>
                 <ul class="list-group list-group-flush">
                   <li class="list-group-item"><strong>Host: </strong> <%= event.hostName %></li>
