--- a/views/event/new.ejs
+++ b/views/event/new.ejs
@@ -26,7 +26,7 @@
                 <div class="form-group row m-2">
                     <label for="movieEventDescription" class="col-sm-2 col-form-label">Description</label>
                     <div class="col-sm-10">
-                        <textarea class="form-control" name="description" id="movieEventDescription" placeholder="Enter description here"
+                        <textarea class="form-control" name="details" id="movieEventDescription" placeholder="Enter description here"
                             required></textarea>
                     </div>
                 </div>
@@ -40,13 +40,13 @@
                 <div class="form-group row m-2">
                     <label for="movieEventStart" class="col-sm-2 col-form-label">Start</label>
                     <div class="col-sm-10">
-                        <input type="datetime-local" name="startAt" class="form-control" id="movieEventStart" required>
+                        <input type="datetime-local" name="startTime" class="form-control" id="movieEventStart" required>
                     </div>
                 </div>
                 <div class="form-group row m-2">
                     <label for="movieEventEnd" class="col-sm-2 col-form-label">End</label>
                     <div class="col-sm-10">
-                        <input type="datetime-local" name="endAt" class="form-control" id="movieEventEnd" required>
+                        <input type="datetime-local" name="endTime" class="form-control" id="movieEventEnd" required>
                     </div>
                 </div>
                 <div class="form-group row m-2">
@@ -57,7 +57,7 @@
                 </div>
                 <div class="form-group row justify-content-end">
                     <div class="col-sm-10">
-                        <button type="submit" class="w-100 btn btn-primary">Sign in</button>
+                        <button type="submit" class="w-100 btn btn-primary">Create Event</button>
                     </div>
                 </div>
             </form>
