--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,11 +1,11 @@
 </main>
 <footer>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark footer">
         <a class="navbar-brand" href="/">
             <h6><i class="fa-regular fa-copyright"></i> Movie Meetup (Sudhamsh Mondrati)</h6>
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkupFooter"
+            aria-controls="navbarNavAltMarkupFooter" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkupFooter">
@@ -23,6 +23,7 @@
         </div>
     </nav>
 </footer>
+
 
 </body>
 
