--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -28,6 +28,8 @@
                     <a class="nav-item me-2 h4 text-white-50 text-decoration-none" href="/events/new">New Event</a>
                     <a class="nav-item me-2 h4 text-white-50 text-decoration-none" href="#">Sign Up</a>
                     <a class="nav-item me-2 h4 text-white-50 text-decoration-none" href="#">Login</a>
+                    <a class="nav-item me-2 h4 text-white-50 text-decoration-none" href="/about">About</a>
+                    <a class="nav-item me-2 h4 text-white-50 text-decoration-none" href="/contact">Contact</a>
                 </div>
             </div>
         </nav>
