--- a/views/event/new.ejs
+++ b/views/event/new.ejs
@@ -8,11 +8,8 @@
                     <div class="col-sm-10">
                         <select class="form-select" id="category" name="category" required>
                             <option selected disabled value="0">-- Select a category --</option>
-                            <option value="1">Action</option>
-                            <option value="2">Romance</option>
-                            <option value="3">Comedy</option>
-                            <option value="4">Thriller</option>
-                            <option value="5">Other</option>
+                            <option value="Action">Action</option>
+                            <option value="Romance">Romance</option>
                         </select>
                     </div>
                 </div>
@@ -35,6 +32,13 @@
                     <div class="col-sm-10">
                         <input type="text" name="location" class="form-control" id="movieEventLocation"
                             placeholder="Enter location here" required>
+                    </div>
+                </div>
+                <div class="form-group row m-2">
+                    <label for="movieEventHost" class="col-sm-2 col-form-label">Host</label>
+                    <div class="col-sm-10">
+                        <input type="text" name="hostName" class="form-control" id="movieEventHost" placeholder="Enter host name here"
+                            required>
                     </div>
                 </div>
                 <div class="form-group row m-2">
