--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -14,6 +14,8 @@
                 <a class="nav-item nav-link h4" href="#">Sign Up</a>
                 <a class="nav-item nav-link h4" href="#">Login</a>
                 <a class="nav-item nav-link h4" href="/events">Events</a>
+                <a class="nav-item nav-link h4" href="/about">About</a>
+                <a class="nav-item nav-link h4" href="/contact">Contact</a>
             </div>
         </div>
         <div class="collapse text-light navbar-collapse justify-content-end">
