--- a/views/event/edit.ejs
+++ b/views/event/edit.ejs
@@ -1,8 +1,8 @@
 <%- include('../partials/header.ejs') %>
-<h3 class="text-center">Create A <u> Movie Meetup </u></h3>
+<h3 class="text-center">Edit A <u> Movie Meetup </u></h3>
         <!-- used bootstrap form model -->
         <div class="container w-75 p-3">
-            <form action="/events" method="post">
+            <form action="/events?_method=PUT" method="post">
                 <div class="form-group row m-2">
                     <label for="category" class="col-sm-2 col-form-label">Category</label>
                     <div class="col-sm-10">
@@ -16,7 +16,7 @@
                 <div class="form-group row m-2">
                     <label for="movieEventTitle" class="col-sm-2 col-form-label">Title</label>
                     <div class="col-sm-10">
-                        <input type="text" name="title" class="form-control" id="movieEventTitle" placeholder="Enter title here"
+                        <input type="text" name="title" class="form-control" value="<%= event.title %>" id="movieEventTitle" placeholder="Enter title here"
                             required>
                     </div>
                 </div>
@@ -30,14 +30,14 @@
                 <div class="form-group row m-2">
                     <label for="movieEventLocation" class="col-sm-2 col-form-label">Where</label>
                     <div class="col-sm-10">
-                        <input type="text" name="location" class="form-control" id="movieEventLocation"
+                        <input type="text" name="location" value="<%= event.location %>" class="form-control" id="movieEventLocation"
                             placeholder="Enter location here" required>
                     </div>
                 </div>
                 <div class="form-group row m-2">
                     <label for="movieEventHost" class="col-sm-2 col-form-label">Host</label>
                     <div class="col-sm-10">
-                        <input type="text" name="hostName" class="form-control" id="movieEventHost" placeholder="Enter host name here"
+                        <input type="text"  value="<%= event.hostName %>" name="hostName" class="form-control" id="movieEventHost" placeholder="Enter host name here"
                             required>
                     </div>
                 </div>
@@ -56,7 +56,7 @@
                 <div class="form-group row m-2">
                     <label for="formFile" class="form-label col-sm-2">Image</label>
                     <div class="col-sm-10">
-                    <input class="form-control" type="file" name="image" id="formFile">
+                    <input class="form-control" type="file" id="formFile">
                 </div>
                 </div>
                 <div class="form-group row justify-content-end">
