--- a/views/event/event.ejs
+++ b/views/event/event.ejs
@@ -2,9 +2,9 @@
         <div class="container">
             <div class="pt-1 mb-2">
             <h4 class="mb-0 text-center"><%= event.category %> Genre: <%= event.title %>
-                <button class="btn btn-lg btn-success">
-                <i class="fa-solid fa-pen-to-square"></i></button>
-                <a href="/delete" class="btn btn-lg btn-danger" title="Delete movie event">
+                <a class="btn btn-lg btn-success" href="<%= event.id %>/edit">
+                <i class="fa-solid fa-pen-to-square"></i></a>
+                <a href="<%= event.id %>/delete" class="btn btn-lg btn-danger" title="Delete movie event">
                 <i class="fa-solid fa-trash-can"></i>
               </a>
             </button>
@@ -13,6 +13,7 @@
             <!-- Used card model from bootstrap -->
             <div class="col d-flex justify-content-center">
             <div class="card mb-2 w-50">
+              <img src="<%= typeof image !== 'undefined' ? image : '' %>" alt="">
                 <img class="card-img-top" src="/images/free-guy.jpg" alt="Free guy movie poster" style="object-fit: cover;" width="286" height="398">
                 <div class="card-body">
                   <h5 class="card-title"><%= event.title %></h5>
