--- a/views/event/new.ejs
+++ b/views/event/new.ejs
@@ -2,7 +2,7 @@
 <h3 class="text-center">Create A <u> Movie Meetup </u></h3>
         <!-- used bootstrap form model -->
         <div class="container w-75 p-3">
-            <form action="/events" method="post">
+            <form action="/events" method="post" enctype="multipart/form-data">
                 <div class="form-group row m-2">
                     <label for="category" class="col-sm-2 col-form-label">Category</label>
                     <div class="col-sm-10">
@@ -54,9 +54,9 @@
                     </div>
                 </div>
                 <div class="form-group row m-2">
-                    <label for="formFile" class="form-label col-sm-2">Image</label>
+                    <label for="image" class="form-label col-sm-2">Image</label>
                     <div class="col-sm-10">
-                    <input class="form-control" type="file" name="image" id="formFile">
+                    <input class="form-control" type="file" name="image" id="image">
                 </div>
                 </div>
                 <div class="form-group row justify-content-end">
