--- a/views/event/new.ejs
+++ b/views/event/new.ejs
@@ -10,6 +10,9 @@
                             <option selected disabled value="0">-- Select a category --</option>
                             <option value="Action">Action</option>
                             <option value="Romance">Romance</option>
+                            <option value="Comedy">Comedy</option>
+                            <option value="Horror">Horror</option>
+                            <option value="Other">Other</option>
                         </select>
                     </div>
                 </div>
