--- a/views/event/edit.ejs
+++ b/views/event/edit.ejs
@@ -2,7 +2,7 @@
 <h3 class="text-center">Edit A <u> Movie Meetup </u></h3>
         <!-- used bootstrap form model -->
         <div class="container w-75 p-3">
-            <form action="/events?_method=PUT" method="post">
+            <form action="/events/<%= event.id %>?_method=PUT" method="post" enctype="multipart/form-data">
                 <div class="form-group row m-2">
                     <label for="category" class="col-sm-2 col-form-label">Category</label>
                     <div class="col-sm-10">
@@ -54,14 +54,14 @@
                     </div>
                 </div>
                 <div class="form-group row m-2">
-                    <label for="formFile" class="form-label col-sm-2">Image</label>
+                    <label for="image" class="form-label col-sm-2">Image</label>
                     <div class="col-sm-10">
-                    <input class="form-control" type="file" id="formFile">
+                    <input class="form-control" name="image" type="file" id="image">
                 </div>
                 </div>
                 <div class="form-group row justify-content-end">
                     <div class="col-sm-10">
-                        <button type="submit" class="w-100 btn btn-primary">Create Event</button>
+                        <button type="submit" class="w-100 btn btn-primary">Edit Event</button>
                     </div>
                 </div>
             </form>
