--- a/views/main/index.ejs
+++ b/views/main/index.ejs
@@ -6,22 +6,20 @@
     <div class="row">
         <div class="col">
             <div class="p-3 m-3">
-                <p>
-                    My name is Sudhamsh Mondrati. I'm the CEO and founder of Movie Meetup, a place where you can
-                    find and go
-                    to movie meetup events. You can even add your own movie meetup so others can join you.
-                </p>
-                <p>Ever since high school, I've always wanted to watch movies, not just by myself but with my
-                    friends. For
-                    me, it was a great experience to be with friends and enjoy watching movies so we could have
-                    a
-                    great time
-                    and have fun!</p>
-                <p>Check out our <a href="/events">current events</a> and join one now! If you haven't
+                <p>Check out our <a href="/about">about page</a> to learn more now! If you haven't
                     already,
                     go ahead and <a href="#">sign up</a> and <a href="#">log in</a> if you want to <a
                         href="/events/new"> create
                         your own event </a> for others to join!</p>
+                        <h4>Where Movies Meet People!</h4>
+                <h5>Simple Movie Format</h5>
+                <ul class="list-group">
+                    <li class="list-group-item">Movie Name</li>
+                    <li class="list-group-item">Host Name</li>
+                    <li class="list-group-item">Location</li>
+                    <li class="list-group-item">Date & Time</li>
+                    <li class="list-group-item">And More!</li>
+                </ul>
             </div>
         </div>
         <div class="col">
