updated contact page with icons

--- a/views/main/contact.ejs
+++ b/views/main/contact.ejs
@@ -10,10 +10,10 @@
     <div>
         <p>If you can't see the above details, feel free to contact me from the below details.</p>
         <ul class="list-group">
-            <li class="list-group-item">Email: sudhamshmondrati@gmail.com</li>
-            <li class="list-group-item">LinkedIn: <a href="https://www.linkedin.com/in/sudhamsh-mondrati/">Visit here</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/SudhamshM">Check it out!</a></li>
-            <li class="list-group-item">Phone: 980-222-2222</li>
+            <li class="list-group-item"><i class="fa-solid fa-at"></i> Email: sudhamshmondrati@gmail.com</li>
+            <li class="list-group-item"><i class="fa-brands fa-linkedin"></i> LinkedIn: <a href="https://www.linkedin.com/in/sudhamsh-mondrati/">Visit here</a></li>
+            <li class="list-group-item"><i class="fa-brands fa-github"></i> GitHub: <a href="https://github.com/SudhamshM">Check it out!</a></li>
+            <li class="list-group-item"><i class="fa-solid fa-phone"></i> Phone: 980-222-2222</li>
         </ul>
     </div>
     <p>As always thank you for contacting MovieMeetup.</p>
