--- a/views/event/edit.ejs
+++ b/views/event/edit.ejs
@@ -7,12 +7,12 @@
                     <label for="category" class="col-sm-2 col-form-label">Category</label>
                     <div class="col-sm-10">
                         <select class="form-select" id="category" name="category" required>
-                            <option selected disabled value="0">-- Select a category --</option>
-                            <option value="Action">Action</option>
-                            <option value="Romance">Romance</option>
-                            <option value="Comedy">Comedy</option>
-                            <option value="Horror">Horror</option>
-                            <option value="Other">Other</option>
+                            <option selected disabled value="selectCategory">-- Select a category --</option>
+                            <option value="Action"  <%= event.category == 'Action' ? 'disabled' : '' %>>Action</option>
+                            <option value="Romance" <%= event.category == 'Romance' ? 'disabled' : '' %>>Romance</option>
+                            <option value="Comedy" <%= event.category == 'Comedy' ? 'disabled' : '' %>>Comedy</option>
+                            <option value="Horror" <%= event.category == 'Horror' ? 'disabled' : '' %>>Horror</option>
+                            <option value="Other" <%= event.category == 'Other' ? 'disabled' : '' %>>Other</option>
                         </select>
                     </div>
                 </div>
@@ -27,7 +27,7 @@
                     <label for="movieEventDescription" class="col-sm-2 col-form-label">Description</label>
                     <div class="col-sm-10">
                         <textarea class="form-control" name="details" id="movieEventDescription" placeholder="Enter description here"
-                            required></textarea>
+                            required><%= event.details %></textarea>
                     </div>
                 </div>
                 <div class="form-group row m-2">
@@ -59,7 +59,7 @@
                 <div class="form-group row m-2">
                     <label for="image" class="form-label col-sm-2">Image</label>
                     <div class="col-sm-10">
-                    <input class="form-control" name="image" type="file" id="image">
+                    <input class="form-control" name="image" type="file" id="image" required>
                 </div>
                 </div>
                 <div class="form-group row justify-content-end">
