--- a/views/event/new.ejs
+++ b/views/event/new.ejs
@@ -59,7 +59,7 @@
                 <div class="form-group row m-2">
                     <label for="image" class="form-label col-sm-2">Image</label>
                     <div class="col-sm-10">
-                    <input class="form-control" type="file" name="image" id="image">
+                    <input class="form-control" type="file" name="image" id="image" required>
                 </div>
                 </div>
                 <div class="form-group row justify-content-end">
