--- a/views/event/event.ejs
+++ b/views/event/event.ejs
@@ -3,7 +3,7 @@
             <div class="pt-1 mb-2">
             <h4 class="mb-0 text-center"><%= event.category %> Genre: <%= event.title %>
                 <form>
-                  <input type="submit" formaction="/events/<%= event.id %>?_method=DELETE" formmethod="post" value="Delete" class="btn btn-lg btn-danger" title="Delete movie event"">
+                  <input type="submit" formaction="/events/<%= event.id %>?_method=DELETE" formmethod="post" value="Delete" class="btn btn-lg btn-danger" title="Delete movie event">
                   <input type="submit" formaction="/events/<%= event.id %>/edit" formmethod="get" value="Edit" class="btn btn-lg btn-success">  
                 </form>
             </button>
@@ -12,8 +12,7 @@
             <!-- Used card model from bootstrap -->
             <div class="col d-flex justify-content-center">
             <div class="card mb-2 w-50">
-              <img src="<%= typeof image !== 'undefined' ? image : '' %>" alt="">
-                <img class="card-img-top" src="/<%= event.image %>" alt="Free guy movie poster" style="object-fit: cover;" width="286" height="398">
+                <img class="card-img-top" src="/<%= event.image %>" alt="<%= event.title %> movie poster" style="object-fit: cover;" width="286" height="398">
                 <div class="card-body">
                   <h5 class="card-title"><%= event.title %></h5>
                   <p class="card-text"><%= event.details %></p>
