--- a/views/event/event.ejs
+++ b/views/event/event.ejs
@@ -24,8 +24,8 @@
                   <li class="list-group-item"><strong>Location: </strong> <%= event.location %></li>
                 </ul>
                 <div class="card-body">
-                  <a href="#" class="card-link">Watch trailer</a>
-                  <a href="#" class="card-link">Get directions</a>
+                  <a href="https://www.youtube.com/results?search_query=<%= event.title %>+trailer" target="_blank" class="card-link">Watch trailer</a>
+                  <a href="https://www.google.com/maps/search/<%= event.location %>" target="_blank" class="card-link">Get directions</a>
                 </div>
               </div>
             </div>
